Revert spacing fix in mobile side-nav and solve better

--- a/stylesheets/scss/components/_side-nav.scss
+++ b/stylesheets/scss/components/_side-nav.scss
@@ -126,7 +126,7 @@ a.open-panel {
 
   nav {
     width: $navwidth;
-    left: -($navwidth + 1em);
+    left: -$navwidth;
     position: absolute;
     top: 0;
     height: 100%;
